Fix a few typos

--- a/Predictors of Attendance Rates for Doctor Appointments in Brazil.ipynb
+++ b/Predictors of Attendance Rates for Doctor Appointments in Brazil.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "Equipped the dataset, I'll be exploring how age, gender, and various health issues affect the likelihood of a \n",
     "patient showing up to their appointment. I'll also be looking to see how effective SMS reminders are and see if the time \n",
-    "between the date scheduled and appointment date have any affect on the rate of no-shows."
+    "between the dates scheduled the and appointment dates have any effect on the rate of no-shows."
    ]
   },
   {
@@ -954,7 +954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `Get_percentage('age_group')` to find the percentage of patitents that attend by age group"
+    "Use `Get_percentage('age_group')` to find the percentage of patients that attend by age group"
    ]
   },
   {
@@ -1221,7 +1221,7 @@
    "source": [
     "Since men booked much fewer appointments than women, one would expect that men would have a lower rate of attendance as well.\n",
     "However, men and women had attendance rates that were roughly the same. In fact, men attended ~1% more of their appointments\n",
-    "than women did. You could reason that women book more doctors appointments because they have higher need for them. Some of this could definitely be attributed to pregnancy related visits, but it's very likely that the bulk of this difference is due to male and female attitudes towards doctors and seeking help in general."
+    "than women did. You could reason that women book more doctor appointments because they have higher need for them. Some of this could definitely be attributed to pregnancy related visits, but it's very likely that the bulk of this difference is due to male and female attitudes towards doctors and seeking help in general."
    ]
   },
   {
@@ -1865,7 +1865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This chart aligns closer with what I was expecting, but lets take it a step further by excluding same-week appointments."
+    "This chart aligns closer with what I was expecting, but let's take it a step further by excluding same-week appointments."
    ]
   },
   {
