Make changes to conclusion

--- a/Predictors of Attendance Rates for Doctor Appointments in Brazil.ipynb
+++ b/Predictors of Attendance Rates for Doctor Appointments in Brazil.ipynb
@@ -1932,8 +1932,8 @@
     "\n",
     "Despite a couple initial surprises like the one seen in the first SMS chart, there weren't any big shockers that I couldn't\n",
     "think of possible reasons for. However, I still find the gap between the number of women's and men's appointments both \n",
-    "surprising and worrisome. As a man, I oftentimes see myself researching my own health concerns instead of inquiring with a \n",
-    "doctor. This is something I'll try to stay conscious of in the future. There's no doubt in my mind that much of the difference in mortality rates of men and women could be attributed to this single issue. \n",
+    "surprising and worrisome. As a man, I oftentimes find myself researching my own health concerns instead of inquiring with a \n",
+    "healthcare professional. I suspect that much of the difference seen in mortality rates of men and women could be attributed to this single issue. Next time I'm sick, I'm going to keep this in mind before dismissing the idea of seeing a doctor.\n",
     "\n",
     "_A quick recommendation for healthcare providers:_\n",
     "> Since you can't change the age, gender, or disabilities a person has and you can't force people to improve their hypertension, diabetes, or alcoholism through lifestyle changes, you should look to make changes to things you can control. Things like SMS and phone call reminders are a great place to start, but you should also be making use of your data to help identify patients at highest risk of not showing up for appointments. I would continue to collect data on the attributes of this dataset, but I'd also expand which data points are collected. With more data, you could build better predictions. With better predictions, you can save more money and help more people. \n",
